--- a/vez1/BROWSERS.html
+++ b/vez1/BROWSERS.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h2>
-        <a href="/v1/BROWSERS.html">Web Browsers</a>
-        <a href="/v1/HTML.html">HTML</a>
-        <a href="/v1/CSS.html">CSS</a>
-        <a href="/v1/JS.html">Java Script</a>
+        <a href="/vez1/BROWSERS.html">Web Browsers</a>
+        <a href="/vez1/HTML.html">HTML</a>
+        <a href="/vez1/CSS.html">CSS</a>
+        <a href="/vez1/JS.html">Java Script</a>
     </h2>
     
     <h1>
