--- a/vez1/HTML.html
+++ b/vez1/HTML.html
@@ -7,16 +7,16 @@
 </head>
 <body>
     <h2>
-        <a href="/v1/BROWSERS.html">Web Browsers</a>
-        <a href="/v1/HTML.html">HTML</a>
-        <a href="/v1/CSS.html">CSS</a>
-        <a href="/v1/JS.html">Java Script</a>
+        <a href="/vez1/BROWSERS.html">Web Browsers</a>
+        <a href="/vez1/HTML.html">HTML</a>
+        <a href="/vez1/CSS.html">CSS</a>
+        <a href="/vez1/JS.html">Java Script</a>
     </h2>
 
     <h1>
         HTML
         <br>
-        <strong><i>(Source: <a href="">Wikipedia</a>)</i></strong>
+        <strong><i>(Source: <a href="https://en.wikipedia.org/wiki/HTML">Wikipedia</a>)</i></strong>
     </h1>
     
 
